using UnityEngine;
public interface IActivatable
{
    void Activate();
}