public interface IActivationState
{
    bool IsActivated { get; }
}